--- a/LaRucheFront/src/app/accueil/accueil.component.scss
+++ b/LaRucheFront/src/app/accueil/accueil.component.scss
@@ -4,26 +4,22 @@
   margin: 0;
 }
 
-.menu {
-  width: 18%;
-  background-color: #2B414F;
-  color: #fff;
-  height: 1000px;
+h2 {
+  font-style: 'Poppins';
+  color: #2B414F;
 }
 
-.body_page {
-  width: 82%;
-  background-color: #EDE8EC;
+main {
   display: flex;
-  flex-direction: column; /* new */
-  height: 1000px;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .home_message_top {
-  height: 60%;
+  height: 500px;
   background-image:url("/assets/home_gestionnaire/couverture-bee.jpg");
   background-size :cover;
-  position: relative; /* make .home_message_top a positioned element */
+  position: relative;
 }
 
 .home_box_message {
@@ -91,6 +87,7 @@
   width: 20px;
   height: 20px;
 }
+
 button {
   height: 45px;
   border : none;
@@ -105,13 +102,14 @@ button {
 
 
 .home_button_bot {
-  height: 40%;
+  height: 50%;
   width: 100%;
   background-color: #EDE8EC;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
   margin : 0px;
+  text-align: center;
 }
 
 
@@ -142,7 +140,7 @@ button {
 }
 #button_top {
   width : 10%;
-    padding: 1% 7%;
+  padding: 2% 7%;
 }
 
 .wrapper {
