Liste des user + Auth gard (en commentaire parceque c'est relou de se reco toutes les 10s)

--- a/LaRucheFront/src/app/Production/liste-production/liste-production.component.html
+++ b/LaRucheFront/src/app/Production/liste-production/liste-production.component.html
@@ -14,7 +14,7 @@
               <th>Type de produit</th>
               <th>Quantité (kg)</th>
               <th>Prix au kilo</th>
-              <th>Année</th>
+              <th>Annéel</th>
               <th>Ruche id</th>
               <th>Récolteur id</th>
               <th></th>
