--- a/LaRucheFront/src/app/navbar/navbar.component.html
+++ b/LaRucheFront/src/app/navbar/navbar.component.html
@@ -65,7 +65,7 @@
                     <label for="menu2" class="alignIconeWithText">Gestion des utilisateurs &#x25BE;</label>
                     <input id="menu2" type="checkbox" />
                     <ul class="sub">
-                      <li class="sousMenus"><a href="#">Récolteurs</a></li>
+                      <li class="sousMenus"><a [routerLink]="['gestionnaire/utilisateurs']" routerLinkActive="active">Récolteurs</a></li>
                       <li class="sousMenus"><a href="#">Clients</a></li>
                     </ul>
                     </li>
