--- a/LaRucheFront/src/app/Production/liste-production/liste-production.component.html
+++ b/LaRucheFront/src/app/Production/liste-production/liste-production.component.html
@@ -14,7 +14,7 @@
               <th>Type de produit</th>
               <th>Quantité (kg)</th>
               <th>Prix au kilo</th>
-              <th>Annéel</th>
+              <th>Année</th>
               <th>Ruche id</th>
               <th>Récolteur id</th>
               <th></th>
