--- a/LaRucheFront/src/app/navbar/navbar.component.html
+++ b/LaRucheFront/src/app/navbar/navbar.component.html
@@ -26,7 +26,7 @@
               <li class="linkAccueil">
                 <img src="assets/navbar/home-b.png" alt="logo" class="iconesMenu" *ngIf="sourisA==false">
                 <img src="assets/navbar/home-o.png" alt="logo" class="iconesMenu" *ngIf="sourisA==true">
-                <a href="#" class="alignIconeWithText">Accueil</a>
+                <a [routerLink]="['gestionnaire']" routerLinkActive="active" class="alignIconeWithText">Accueil</a>
               </li>
             </div>
   
