add marche bien et edit marche pas

--- a/LaRucheFront/src/app/User/user-detail/user-detail.component.html
+++ b/LaRucheFront/src/app/User/user-detail/user-detail.component.html
@@ -1,1 +1,47 @@
-<p>user-detail works!</p>
+<!-- <head>
+    <link rel="stylesheet" href="styleAdd.css">
+  </head> -->
+  <body>
+    <div id="content">
+        <h1 *ngIf="!formValue.id else sinon"><b>Gestion des utilisateurs - Ajouter un utilisateur </b></h1><br>
+          <ng-template #sinon><h1><b>Gestion des utilisateurs - Modifier l'utilisateur</b></h1></ng-template>
+
+      <hr>
+      <div class="addUser">
+        <form class="form-add" [formGroup]="userForm" (ngSubmit)="submit()">
+            <legend *ngIf="!formValue.id else sinon"><b>Ajouter un utilisateur </b></legend><br>
+            <ng-template #sinon><legend> <b>Modifier l'utilisateur</b></legend></ng-template>
+            
+          <label for="typecompte">Type Compte :</label>
+  
+          <input checked type="radio" name="type" onchange="changeFontWeight(this)" formControlName="type" value="recolteur"> Apiculteur
+          <input type="radio" name="type" onchange="changeFontWeight(this)" formControlName="type" value="gestionnaire" > Gestionnaire <br>
+          <br>
+          <label for="login">Login :</label><br><br>
+          <input required name="login" type="text" formControlName="login" [value]="userForm.get('login').value"><br><br>
+  
+          <div class="mdp">
+            <div class="mdp1">
+              <label for="mdp">Mot de passe :</label>
+              <input required name="password" type="password" formControlName="password" >
+            </div>
+            <div class="mdp1">
+              <label for="mdp">Confirmer le mot de passe :</label>
+              <input class="password" required name="password" type="password" formControlName="confirmPassword"><br><br>
+              <div *ngIf="userForm.get('confirmPassword').hasError('passwordsNotMatch')">
+                Les mots de passe ne correspondent pas
+              </div>
+            </div>
+          </div>
+
+
+
+
+          <input type="button" class ="btn1" value="Annuler" (click)="goToLogin()">
+          <input type="button" class ="btn2" type="submit" value="Sauvegarder" [disabled]="userForm.invalid">
+        </form>
+  </div>
+  
+  
+    </div>
+  <body>
