--- a/LaRucheFront/src/app/accueil/accueil.component.html
+++ b/LaRucheFront/src/app/accueil/accueil.component.html
@@ -25,6 +25,7 @@
 							<button (click)="goToRucheVulnerables()">Voir mes vulnérabilités</button>
 						</div>
 					</div>
+					<!-- WIP
 					<div class="bot">
 						<div class="left">
 							<ng-container *ngIf="listRucheNourissage.length > 0; else noNourissage">
@@ -40,6 +41,7 @@
 							<button (click)="goToRucheN()">Voir mes ruches</button>
 						</div>
 					</div>
+					-->
 				</div>
 			</div>
 		</div>
