--- a/LaRucheFront/src/app/User/user-detail/user-detail.component.scss
+++ b/LaRucheFront/src/app/User/user-detail/user-detail.component.scss
@@ -146,7 +146,7 @@ label[for="login"]{
   background-color: #F58F29;
 }
 
-.btn1:hover{
+.btn1:hover, .btn2:hover{
   background-color: #33658A;
   font-size: 16px;
   font-weight: bold;
