remplacer tous les gestionnaire dans les routes en unbeelievable

--- a/LaRucheFront/src/app/navbar/navbar.component.html
+++ b/LaRucheFront/src/app/navbar/navbar.component.html
@@ -26,7 +26,7 @@
               <li class="linkAccueil">
                 <img src="assets/navbar/home-b.png" alt="logo" class="iconesMenu" *ngIf="sourisA==false">
                 <img src="assets/navbar/home-o.png" alt="logo" class="iconesMenu" *ngIf="sourisA==true">
-                <a [routerLink]="['gestionnaire']" routerLinkActive="active" class="alignIconeWithText">Accueil</a>
+                <a [routerLink]="['unbeelievable']" routerLinkActive="active" class="alignIconeWithText">Accueil</a>
               </li>
             </div>
   
@@ -42,7 +42,7 @@
               <li class="linkCompte">
                 <img src="assets/navbar/ruche-b.png" alt="logo" class="iconesMenu" *ngIf="sourisC==false">
                 <img src="assets/navbar/ruche-o.png" alt="logo" class="iconesMenu" *ngIf="sourisC==true">
-                <a [routerLink]="['gestionnaire/ruche']" routerLinkActive="active" class="alignIconeWithText">Mes Ruches</a>
+                <a [routerLink]="['unbeelievable/ruche']" routerLinkActive="active" class="alignIconeWithText">Mes Ruches</a>
               </li>
             </div>  
          
@@ -50,7 +50,7 @@
               <li class="linkRecoltes">
                 <img src="assets/navbar/miel-b.png" alt="logo" class="iconesMenu" *ngIf="sourisD==false">
                 <img src="assets/navbar/miel-o.png" alt="logo" class="iconesMenu" *ngIf="sourisD==true">
-                <a [routerLink]="['gestionnaire/production']" routerLinkActive="active" class="alignIconeWithText">Mes récoltes</a>
+                <a [routerLink]="['unbeelievable/production']" routerLinkActive="active" class="alignIconeWithText">Mes récoltes</a>
               </li>
             </div>
   
@@ -65,8 +65,8 @@
                     <label for="menu2" class="alignIconeWithText">Gestion des utilisateurs &#x25BE;</label>
                     <input id="menu2" type="checkbox" />
                     <ul class="sub">
-                      <li class="sousMenus"><a [routerLink]="['gestionnaire/utilisateurs/recolteurs']" routerLinkActive="active">Récolteurs</a></li>
-                      <li class="sousMenus"><a [routerLink]="['gestionnaire/utilisateurs/clients']" routerLinkActive="active">Clients</a></li>
+                      <li class="sousMenus"><a [routerLink]="['unbeelievable/utilisateurs/recolteurs']" routerLinkActive="active">Récolteurs</a></li>
+                      <li class="sousMenus"><a [routerLink]="['unbeelievable/utilisateurs/clients']" routerLinkActive="active">Clients</a></li>
                     </ul>
                     </li>
                   </ul>
