hide users from accueil + only recolteur in production

--- a/LaRucheFront/src/app/accueil/accueil.component.html
+++ b/LaRucheFront/src/app/accueil/accueil.component.html
@@ -72,7 +72,7 @@
 
 			</div>
 
-			<div class="box-container">
+			<div *ngIf="allowed()" class="box-container">
 				<a routerLink="unbeelievable/ruche/users" class="img_box">
 
 					<img src="/assets/home_gestionnaire/apiculteur-b.png">
