--- a/LaRucheFront/src/app/app.component.html
+++ b/LaRucheFront/src/app/app.component.html
@@ -1,3 +1,4 @@
+<html>
 <body>
     
 <div id="page" class="page">
@@ -20,6 +21,8 @@
 
 
 </body>
+
+</html>
 <!--
     <navbar *ngIf="connectedUser"></navbar>
 -->
