--- a/LaRucheFront/src/app/app.component.scss
+++ b/LaRucheFront/src/app/app.component.scss
@@ -3,32 +3,25 @@
 @import url('https://fonts.cdnfonts.com/css/glacial-indifference-2');
 
 html, body {
-    height: 100%;
-  }
-  
-  body {
-    display: flex;
-    flex-direction: column;
-    overflow-x: hidden;
-    overflow-block:auto;
- 
+  height: 100%;
 }
 
-
-#page {
+body {
   display: flex;
-  flex-wrap: nowrap;
-  /* height: 1080px; */
-  padding-bottom: 50px; /* Add the height of the footer as padding to the bottom */
+  flex-direction: column;
+  overflow-x: hidden;
+  overflow-block: auto;
 }
 
-#router {
+  overflow-block: auto;
+  padding-bottom: 50px; /* Add the height of the footer as padding to the bottom */
+
   flex-grow: 1;
   background-color: #EDE8EC ;
   min-height: calc(100vh - 100px); /* Subtract the height of the footer from the viewport height */
   overflow-y: auto;
-  
-}
+  margin-bottom: 45px;
+  padding-bottom: 50px;
 
 .router {
   flex-grow: 1;
@@ -44,3 +37,5 @@ html, body {
     order:-1;
     background-color:#2b414f;
   }
+  margin-top: auto;
+  height: 100vh;
