--- a/LaRucheFront/src/app/app.component.scss
+++ b/LaRucheFront/src/app/app.component.scss
@@ -19,13 +19,14 @@ html, body {
   display: flex;
   flex-wrap: nowrap;
   /* height: 1080px; */
-  padding-bottom: 50px; /* Add the height of the footer as padding to the bottom */
+ /*  padding-bottom: 50px;  *//* Add the height of the footer as padding to the bottom */
+ overflow-block:auto;
 }
 
 #router {
   flex-grow: 1;
   background-color: #EDE8EC ;
-  min-height: calc(100vh - 100px); /* Subtract the height of the footer from the viewport height */
+  min-height: calc(100vh - 45px); /* Subtract the height of the footer from the viewport height */
   overflow-y: auto;
   
 }
@@ -43,4 +44,5 @@ html, body {
     width: 13%;
     order:-1;
     background-color:#2b414f;
+    height: 100vh;
   }
