--- a/LaRucheFront/src/app/connexion/connexion.component.scss
+++ b/LaRucheFront/src/app/connexion/connexion.component.scss
@@ -10,7 +10,8 @@
   background-image: url('/assets/connexion/imageLogin.jpg');
   background-size: cover;
   background-position: center;
-  height: calc(100vh - 50px);
+  /* height: calc(100vh - 45px); */
+  height: 100vh;
   width: 50%;
   float: left;
 }
@@ -18,7 +19,8 @@
 /*Block de droite*/
 .RightBlock {
 background-color: #EDE8EC;
-height: calc(100vh - 50px);
+/* height: calc(100vh - 45px); */
+height: 100vh;
 width: 50%;
 float: left;
 display: flex;
