--- a/LaRucheFront/src/app/app.component.scss
+++ b/LaRucheFront/src/app/app.component.scss
@@ -44,5 +44,6 @@ html, body {
     width: 13%;
     order:-1;
     background-color:#2b414f;
-    height: 100vh;
+    height: 105vh;
+    min-width: 225px;
   }
