--- a/LaRucheFront/src/app/User/user-detail/user-detail.component.html
+++ b/LaRucheFront/src/app/User/user-detail/user-detail.component.html
@@ -1,13 +1,10 @@
-<!-- <head>
-    <link rel="stylesheet" href="styleAdd.css">
-  </head> -->
   <body>
-    <div id="content">
-        <h1 *ngIf="!formValue.id else sinon"><b>Gestion des utilisateurs - Ajouter un utilisateur coucou</b></h1><br>
+    
+        <h1 *ngIf="!formValue.id else sinon"><b>Gestion des utilisateurs - Ajouter un utilisateur</b></h1><br>
           <ng-template #sinon><h1><b>Gestion des utilisateurs - Modifier l'utilisateur</b></h1></ng-template>
 
       <hr>
-      <div class="addUser">
+      <div class="wrapper">
         <form class="form-add" [formGroup]="userForm" (ngSubmit)="submit()">
             <legend *ngIf="!formValue.id else sinon"><b>Ajouter un utilisateur </b></legend><br>
             <ng-template #sinon><legend> <b>Modifier l'utilisateur</b></legend></ng-template>
@@ -18,37 +15,43 @@
           <input type="radio" name="type" onchange="changeFontWeight(this)" formControlName="type" value="gestionnaire" > Gestionnaire <br>
           <br>
           
-          <label for="login">Login :</label><br><br>
-          <input required name="login" type="text" formControlName="login" [value]="userForm.get('login').value"><br><br>
-  
+         <div class = "login">
+          <label for="login">Login :</label>
+          <input required name="login" type="text" formControlName="login" [value]="userForm.get('login').value">
+          <div *ngIf="userForm.get('login').dirty && userForm.get('login').errors['required']" class="alert alert-danger">
+            <div class="error">Vous devez renseigner un login</div>
+        </div>
+      </div> 
           <div class="mdp">
 
             <div class="mdp1">
               <label for="mdp">Mot de passe :</label>
               <input required name="password" type="password" formControlName="password" >
               <div *ngIf="userForm.get('password').dirty && userForm.get('password').errors && userForm.get('password').errors['required']" class="alert alert-danger">
-                <div>Password is required</div>
+                <div class="error">Vous devez mettre un mot de passe</div>
             </div>
             </div>
-            </div>
+           
 
             <div class="mdp1">
               <label for="mdp">Confirmer le mot de passe :</label>
               <input class="password" required name="confirmPassword" type="password" formControlName="confirmPassword"><br><br>
               <div *ngIf="userForm.get('confirmPassword').dirty && userForm.get('confirmPassword').errors && userForm.get('confirmPassword').errors['required']" class="alert alert-danger">
-                <div>Confirm Password is required</div>
+                <div class="error">Veuillez confirmer un mot de passe</div>
             </div>
             <div *ngIf="userForm.get('confirmPassword').dirty && userForm.get('confirmPassword').errors && userForm.get('confirmPassword').errors['confirmPasswordValidator']" class="alert alert-danger">
-                <div>Password and Confirm Password didn't match.</div>
+                <div class="error">Les mots de passe doivent être identiques !</div>
             </div>
-             
-            </div>
-
+          </div>
+        </div> 
+          
+          <div class="buttons">
           <input type="button" class ="btn1" value="Annuler" (click)="goToHome()">
-          <input  *ngIf="!userForm.invalid" type="button" class ="btn2" type="submit" value="Sauvegarder">
+          <input  [disabled]="userForm.invalid" type="button" class ="btn2" type="submit" value="Sauvegarder">
+        </div>
         </form>
   </div>
   
   
-    </div>
+   
   <body>
