--- a/LaRucheFront/src/app/accueil/accueil.component.html
+++ b/LaRucheFront/src/app/accueil/accueil.component.html
@@ -58,14 +58,14 @@
 		<div class="home_button_bot">
 
 			<div class="box-container">
-				<a routerLink="gestionnaire/ruche/ma-ruche" class="img_box">
+				<a (click)="goToRucheN()" class="img_box">
 					<img src="/assets/home_gestionnaire/miel-b.png">
 				</a>
 				<button (click)="goToRucheN()" id="button_bot">Voir mes ruches</button>
 			</div>
 
 			<div class="box-container">
-				<a routerLink="gestionnaire/ruche/ma-production" class="img_box">
+				<a (click)="goToProduction()" class="img_box">
 					<img src="/assets/home_gestionnaire/hive-b.png">
 				</a>
 				<button (click)="goToProduction()" id="button_bot">Voir mes productions</button>
@@ -73,7 +73,7 @@
 			</div>
 
 			<div class="box-container">
-				<a routerLink="gestionnaire/ruche/users" class="img_box">
+				<a (click)="goToUsers()" class="img_box">
 
 					<img src="/assets/home_gestionnaire/apiculteur-b.png">
 				</a>
