--- a/LaRucheFront/src/app/accueil/accueil.component.scss
+++ b/LaRucheFront/src/app/accueil/accueil.component.scss
@@ -45,6 +45,10 @@ main {
   text-align: left; /* align text to left */
   flex-grow: 1;
 }
+.message_content .top .left .icon {
+  width: 50px;
+  height: 50px;
+}
 
 .message_content .top,
 .message_content .bot {
@@ -80,12 +84,10 @@ main {
 }
 .message_content a,
 .message_content p {
-  display: inline-block;
-  margin: 0;
-}
-.message_content .icon {
-  width: 20px;
-  height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 button {
