--- a/LaRucheFront/src/app/accueil/accueil.component.html
+++ b/LaRucheFront/src/app/accueil/accueil.component.html
@@ -43,7 +43,7 @@
 						</div>
 
 						<div class="right">
-							<button (click)="goToRucheN()">Voir mes ruches</button>
+							<button (click)="goToRucheN()">Voir mes ruches à nourrir</button>
 						</div>
 					</div>
 				
