--- a/LaRucheFront/src/app/accueil/accueil.component.scss
+++ b/LaRucheFront/src/app/accueil/accueil.component.scss
@@ -147,11 +147,6 @@ button {
   width : 10%;
   padding: 2% 7%;
 }
-@media only screen and (max-width: 768px) {
-  button {
-    font-size: 12px;
-  }
-}
 
 .wrapper {
   display: flex;
@@ -172,3 +167,6 @@ footer {
   align-items:center;
 }
 
+.page-padding-bottom {
+  padding-bottom: 50px; /* or any other value you want */
+}
